Add final Style to landing-page project

--- a/Foundations/Projects/landing-page/index.html
+++ b/Foundations/Projects/landing-page/index.html
@@ -23,37 +23,37 @@
     </header>
     <main>
         <div class="space-container-dark">
-            <section>
-                <div>
-                    <h2>This website is awesome</h2>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign Up</button>
+            <section class="awesome">
+                <div class="awesome-text">
+                    <h2 class="title">This website is awesome</h2>
+                    <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="sign-up">Sign Up</button>
                 </div>
-                <div>
+                <div class="awesome-img">
                     <img src="" alt="this is a placeholder for an image">
                 </div>
             </section>
         </div>
         <div class="space-container-white">
             <section>
-                <h2>
+                <h2 class="random-title">
                     Some random information.
                 </h2>
-                <div>
-                    <div>
-                        <img src="" alt="">
+                <div class="random-container">
+                    <div class="random-box">
+                        <img class="random-img" alt="">
                         <span>this is some subtext under an illustration or image</span>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="random-box">
+                        <img class="random-img" src="" alt="">
                         <span>this is some subtext under an illustration or image</span>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="random-box">
+                        <img class="random-img" src="" alt="">
                         <span>this is some subtext under an illustration or image</span>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="random-box">
+                        <img class="random-img" src="" alt="">
                         <span>this is some subtext under an illustration or image</span>
                     </div>
                 </div>
@@ -61,17 +61,17 @@
         </div>
         <div class="space-container-gray">
             <section>
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's justs filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-                <span>-Thor, God of Thunder</span>
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's justs filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+                <span class="quote-author">-Thor, God of Thunder</span>
             </section>
         </div>
         <div class="space-container-white">
-            <section>
-                <div class="blue-section">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+            <section class="blue-section">
+                <div>
+                    <h3 class="action-title">Call to action! It's time!</h3>
+                    <p class="action-text">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign Up</button>
+                <button class="action-button">Sign Up</button>
             </section>
         </div>
     </main>
