Add functionality and style to button except square root, power and pi

--- a/Foundations/Projects/calculator/index.html
+++ b/Foundations/Projects/calculator/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
     <div class="calculator">
         <div class="screen"></div>
         <div class="buttons">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
+            <button class="n-btn">7</button>
+            <button class="n-btn">8</button>
+            <button class="n-btn">9</button>
+            <button class="div">/</button>
             <button>√</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>*</button>
+            <button class="n-btn">4</button>
+            <button class="n-btn">5</button>
+            <button class="n-btn">6</button>
+            <button class="mult">*</button>
             <button>x²</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button class="n-btn">1</button>
+            <button class="n-btn">2</button>
+            <button class="n-btn">3</button>
+            <button class="sub">-</button>
             <button>π</button>
-            <button>0</button>
-            <button>.</button>
-            <button>erase</button>
-            <button>+</button>
-            <button>=</button>
+            <button class="n-btn">0</button>
+            <button class="dot">.</button>
+            <button class="clear">clear</button>
+            <button class="add">+</button>
+            <button class="eq">=</button>
         </div>
     </div>
 </body>
