Add links to new projects

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h2>Foundations</h2>
         <ul>
             <li><a href="./Foundations/Projects/odin-recipes/index.html">Odin Recipes</a></li>
+            <li><a href="./Foundations/Projects/landing-page/index.html"></a>Landing Page</li>
+            <li><a href="./Foundations/Projects/rock-paper-scissors/index.html">Rock Paper Scissors</a></li>
+            <li><a href="./Foundations/Projects/etch-a-sketch/index.html">Etch a Sketch</a></li>
+            <li><a href="./Foundations/Projects/calculator/index.html">Calculator</a></li>
         </ul>
     <h2>Full Stack</h2>
 </body>
