Add UI to tictactoe

--- a/JavaScript/tictactoe/index.html
+++ b/JavaScript/tictactoe/index.html
@@ -3,22 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div class="gamecontrols">
-        <form action="#" class="players-name">
-            <div class="input">
-                <label for="player1">Player 1:</label>
-                <input id="player1" name="player1" type="text" required>
-            </div>
-            <div class="input">
-                <label for="player2">Player 2:</label>
-                <input id="player2" name="player2" type="text" required>
-            </div>
-            <button>Start!</button>
-        </form>
+        <dialog class="dialog">
+            <form action="#" method="dialog" class="players-name">
+                <div class="input">
+                    <label for="player1">Player 1:</label>
+                    <input id="player1" name="player1" type="text" required>
+                </div>
+                <div class="input">
+                    <label for="player1Mark">Player Mark:</label>
+                    <select name="player1Mark" id="player1Mark">
+                        <option value="⭕">⭕</option>
+                        <option value="🔘">🔘</option>
+                        <option value="🔳">🔳</option>
+                    </select>
+                </div>
+                <div class="input">
+                    <label for="player2">Player 2:</label>
+                    <input id="player2" name="player2" type="text" required>
+                </div>
+                <div class="input">
+                    <label for="player2Mark">Player Mark:</label>
+                    <select name="player2Mark" id="player2Mark">
+                        <option value="❌">❌</option>
+                        <option value="✖">✖</option>
+                        <option value="🔺">🔺</option>
+                    </select>
+                </div>
+                <button class="start-btn">Start!</button>
+            </form>
+        </dialog>
+    </div>
+    <div class="score">
+        
     </div>
     <div class="gameboard">
     </div>
