add table design

--- a/JavaScript/todo-list/src/template.html
+++ b/JavaScript/todo-list/src/template.html
@@ -6,6 +6,7 @@
     <title>To Do List</title>
 </head>
 <body>
-
+<nav class="navigation"></nav>
+<main class="main-container"></main>
 </body>
 </html>
