Add form, update button

--- a/JavaScript/todo-list/src/template.html
+++ b/JavaScript/todo-list/src/template.html
@@ -6,7 +6,11 @@
     <title>To Do List</title>
 </head>
 <body>
-<nav class="navigation"></nav>
-<main class="main-container"></main>
+    <dialog class="dialog">
+        <button class="close-d">×</button>
+        <div class="d-container"></div>
+    </dialog>
+    <nav class="navigation"></nav>
+    <main class="main-container"></main>
 </body>
 </html>
