--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
     <title>The Odin Project</title>
 </head>
 <body>
-    <h1>The Odin Projects</h1>
-    <h2>Foundations</h2>
-        <ul>
-            <li><a href="./Foundations/Projects/odin-recipes/index.html">Odin Recipes</a></li>
-            <li><a href="./Foundations/Projects/landing-page/index.html"></a>Landing Page</li>
-            <li><a href="./Foundations/Projects/rock-paper-scissors/index.html">Rock Paper Scissors</a></li>
-            <li><a href="./Foundations/Projects/etch-a-sketch/index.html">Etch a Sketch</a></li>
-            <li><a href="./Foundations/Projects/calculator/index.html">Calculator</a></li>
-        </ul>
-    <h2>Full Stack</h2>
 </body>
 </html>
