Add a bit more of logic

--- a/JavaScript/testing/index.html
+++ b/JavaScript/testing/index.html
@@ -20,6 +20,10 @@
             border: 1px solid gray;
         }
 
+        .ship {
+            background-color: lightblue;
+        }
+
         .square:hover {
             background-color: lightgray;
         }
